RESOLVED FIXED278073
[WebKitLegacy] Fix -Wenum-compare in WebDefaultPolicyDelegate.m
https://bugs.webkit.org/show_bug.cgi?id=278073
Summary [WebKitLegacy] Fix -Wenum-compare in WebDefaultPolicyDelegate.m
David Kilzer (:ddkilzer)
Reported 2024-08-13 19:51:15 PDT
Fix -Wenum-compare in WebDefaultPolicyDelegate.m from WebKitLegacy when compiling with newer clang: OpenSource/Source/WebKitLegacy/mac/DefaultDelegates/WebDefaultPolicyDelegate.m:88:24: error: comparison of different enumeration types ('WebNavigationType' (aka 'enum WebNavigationType') and 'WebExtraNavigationType') [-Werror,-Wenum-compare] 88 | } else if (navType == WebNavigationTypePlugInRequest) { | ~~~~~~~ ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 1 error generated.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-13 19:51:38 PDT
David Kilzer (:ddkilzer)
Comment 2 2024-08-13 20:00:43 PDT
David Kilzer (:ddkilzer)
Comment 3 2024-08-18 14:05:07 PDT
Committed 282241@main (a27fb4b): https://commits.webkit.org/282241@main Reviewed commits have been landed. Closing PR #32164 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.