[WebKitLegacy] Fix -Wenum-compare in WebDefaultPolicyDelegate.m <https://bugs.webkit.org/show_bug.cgi?id=278073> <rdar://133809285>

Reviewed by Alex Christensen.

Use WTF::enumToUnderlyingType() to compare
WebNavigationTypePlugInRequest to a WebNavigationType enum.

Also convert WebDefaultPolicyDelegate.m to Obj-C++ source file so that
WTF::enumToUnderlyingType() can be used.

* Source/WebKitLegacy/WebKitLegacy.xcodeproj/project.pbxproj:
- Rename WebDefaultPolicyDelegate.m to WebDefaultPolicyDelegate.mm.
* Source/WebKitLegacy/mac/DefaultDelegates/WebDefaultPolicyDelegate.mm: Rename from Source/WebKitLegacy/mac/DefaultDelegates/WebDefaultPolicyDelegate.m.
(-[WebDefaultPolicyDelegate webView:decidePolicyForNavigationAction:request:frame:decisionListener:]):
- Use WTF::enumToUnderlyingType() to fix the warning.
* Tools/DumpRenderTree/DefaultPolicyDelegate.mm:
(-[DefaultPolicyDelegate webView:decidePolicyForNavigationAction:request:frame:decisionListener:]):
- Use WTF::enumToUnderlyingType() instead of static_cast<unsigned>()
  to match code in WebDefaultPolicyDelegate.mm.

Canonical link: https://commits.webkit.org/282241@main