Source/WebKitLegacy/mac/DefaultDelegates/WebDefaultPolicyDelegate.mm
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2005, 2008 Apple Inc. All rights reserved.
+ * Copyright (C) 2005-2024 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -36,6 +36,7 @@
 #import <Foundation/NSURLRequest.h>
 #import <Foundation/NSURLResponse.h>
 #import <wtf/Assertions.h>
+#import <wtf/EnumTraits.h>
 
 @implementation WebDefaultPolicyDelegate
 
@@ -85,7 +86,7 @@ static WebDefaultPolicyDelegate *sharedDelegate = nil;
 
     if ([WebView _canHandleRequest:request forMainFrame:frame == [wv mainFrame]]) {
         [listener use];
-    } else if (navType == WebNavigationTypePlugInRequest) {
+    } else if (enumToUnderlyingType(navType) == enumToUnderlyingType(WebNavigationTypePlugInRequest)) {
         [listener use];
     } else {
         // A file URL shouldn't fall through to here, but if it did,
